# youtube-news-monitoring

./: .gitignore  README.md  pyproject.toml  report.md
news_monitoring/: 01_eda.ipynb  02_get_channel_videos.py  03_compare.ipynb
