[tool.poetry]
authors = ["Johannes Filter <hi@jfilter.de>"]
description = ""
name = "dataskop-wahlempfehlungen-btw21"
version = "0.0.0"

[tool.poetry.dependencies]
altair = "^4.1.0"
dataset = "^1.5.2"
dateparser = "^1.0.0"
jupyterlab = "^3.0.16"
matplotlib = "^3.4.3"
pandas = "^1.3.0"
python = "^3.8"
python-youtube = "^0.8.1"
tqdm = "^4.62.0"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
